<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="16dp"
    android:background="@color/colorWhite"
    app:cardCornerRadius="8dp"
    app:cardElevation="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvTitleAvatar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_picture"
            android:textColor="@color/colorFontSub"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivAvatar"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/user_picture"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitleAvatar" />

        <TextView
            android:id="@+id/tvTitleName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/name"
            android:textColor="@color/colorFontSub"
            app:layout_constraintTop_toBottomOf="@id/ivAvatar" />

        <TextView
            android:id="@+id/tvUser"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textColor="@color/colorFontBlack"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitleName"
            tools:text="Name" />

        <TextView
            android:id="@+id/tvTitleEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/email"
            android:textColor="@color/colorFontSub"
            app:layout_constraintTop_toBottomOf="@id/tvUser" />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textColor="@color/colorFontBlack"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitleEmail"
            tools:text="Name@mail.vocm" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>